fix: add z-index variable

--- a/src/assets/scss/variables.scss
+++ b/src/assets/scss/variables.scss
@@ -14,6 +14,7 @@ $gradient-dark: linear-gradient(173.75deg, $gradient-top 0.15%, $gradient-bottom
 // z-index
 $layer-header: 50;
 $layer-social-share: 45;
+$layer-loader: 41;
 $layer-images: 40;
 $layer-grid-lines: 35;
 
