--- a/src/components/Loader/Loader.scss
+++ b/src/components/Loader/Loader.scss
@@ -1,5 +1,5 @@
 .loader {
-  z-index:9999;
+  z-index: $layer-loader;
   display: flex;
   align-items: center;
   justify-content: center;
